Added the HTML structure

--- a/vanilla-weather-app/index.html
+++ b/vanilla-weather-app/index.html
@@ -10,9 +10,42 @@
 </head>
 <body>
     <div class="container">
+        <div class="weather-app">
         <h1>
-            Weather app
+            Berlin
         </h1>
+        <ul>
+            <li>
+                Monday 2:00
+            </li>
+            <li>
+                Sunny
+            </li>
+        </ul>
+        <div class="row">
+            <div class="col-6">
+                <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="sunny" />
+                12°C |°F
+            </div>
+            <div class="col-6">
+                <ul>
+                    <li>
+                        Precipitation: 0%
+                    </li>
+                    <li>
+                        Humidity: 7%
+                    </li>
+                    <li>
+                        Wind: 2km/h
+                    </li>
+                </ul>
+            </div>
+        </div>
+        </div>
+        <small>
+            <a href="https://github.com/MarKru21" target="_blank">Open source code,</a>
+            by Marlen Krügener
+        </small>
     </div>
     <script src="src/app.js"></script>
 </body>
