--- a/vanilla-weather-app/index.html
+++ b/vanilla-weather-app/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+        <link rel="stylesheet" href="src/style.css" />
     <title>Weather app</title>
 </head>
 <body>
@@ -14,16 +14,16 @@
         <h1>
             Berlin
         </h1>
-        <ul>
-            <li>
-                Monday 2:00
-            </li>
-            <li>
-                Sunny
-            </li>
-        </ul>
         <div class="row">
-            <div class="col-6">
+                <div class="col-6">
+                    <ul>
+                        <li>
+                            Monday 8th of March 1:10 pm
+                        </li>
+                        <li>
+                            Sunny
+                        </li>
+                    </ul>
                 <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="sunny" />
                 12°C |°F
             </div>
@@ -41,11 +41,11 @@
                 </ul>
             </div>
         </div>
-        </div>
         <small>
             <a href="https://github.com/MarKru21" target="_blank">Open source code,</a>
             by Marlen Krügener
         </small>
+        </div>
     </div>
     <script src="src/app.js"></script>
 </body>
