--- a/vanilla-weather-app/index.html
+++ b/vanilla-weather-app/index.html
@@ -10,22 +10,33 @@
 </head>
 <body>
     <div class="container">
+        <div class="weather-app-wrapper">
         <div class="weather-app">
+            <div class="overview">
         <h1>
             Berlin
         </h1>
+        <ul>
+            <li>
+                Monday 8th of March 1:10 pm
+            </li>
+            <li>
+                Sunny
+            </li>
+        </ul>
+        </div>
         <div class="row">
                 <div class="col-6">
-                    <ul>
-                        <li>
-                            Monday 8th of March 1:10 pm
-                        </li>
-                        <li>
-                            Sunny
-                        </li>
-                    </ul>
-                <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="sunny" />
-                12°C |°F
+                    <div class="clearfix weather-temperature">
+                <img 
+                src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" 
+                alt="Sunny"
+                class="float-left" 
+                />
+                <div class="float-left">
+                    <strong>12</strong><span class="units">°C | <a href="#">°F</a></span>
+                </div>
+            </div>
             </div>
             <div class="col-6">
                 <ul>
@@ -40,6 +51,7 @@
                     </li>
                 </ul>
             </div>
+        </div>
         </div>
         <small>
             <a href="https://github.com/MarKru21" target="_blank">Open source code,</a>
