--- a/vanilla-weather-app/index.html
+++ b/vanilla-weather-app/index.html
@@ -31,9 +31,9 @@
                 <img 
                 src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" 
                 alt="Sunny"
-                class="float-left" 
+                style="float: left;" 
                 />
-                <div class="float-left">
+                <div style="float: left;">
                     <strong>12</strong><span class="units">°C | <a href="#">°F</a></span>
                 </div>
             </div>
