--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <link rel="stylesheet" href="src/style.css" />
     <title>Weather app</title>
 </head>
@@ -13,15 +14,13 @@
         <div class="weather-app-wrapper">
         <div class="weather-app">
             <div class="overview">
-        <h1>
-            Berlin
+        <h1 id="city">
         </h1>
         <ul>
             <li>
                 Monday 8th of March 1:10 pm
             </li>
-            <li>
-                Sunny
+            <li id="description">
             </li>
         </ul>
         </div>
@@ -34,7 +33,7 @@
                 style="float: left;" 
                 />
                 <div style="float: left;">
-                    <strong>12</strong><span class="units">°C | <a href="#">°F</a></span>
+                    <strong id="temperature"></strong><span class="units">°C | <a href="#">°F</a></span>
                 </div>
             </div>
             </div>
