Showing the current temperature

--- a/index.html
+++ b/index.html
@@ -40,13 +40,10 @@
             <div class="col-6">
                 <ul>
                     <li>
-                        Precipitation: 0%
+                        Humidity: <span id="humidity"></span>%
                     </li>
                     <li>
-                        Humidity: 7%
-                    </li>
-                    <li>
-                        Wind: 2km/h
+                        Wind: <span id="wind"></span> km/h
                     </li>
                 </ul>
             </div>
