Updated the time

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <h1 id="city">
         </h1>
         <ul>
-            <li>
-                Monday 8th of March 1:10 pm
+            <li>Last updated: <span id="date"></span>
             </li>
             <li id="description">
             </li>
