--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
                 <div class="col-6">
                     <div class="clearfix weather-temperature">
                 <img 
-                src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" 
-                alt="Sunny"
+                src=""
+                alt="Clear"
+                id="icon"
                 style="float: left;" 
                 />
                 <div style="float: left;">
