--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
                 style="float: left;" 
                 />
                 <div style="float: left;">
-                    <strong id="temperature"></strong><span class="units">°C | <a href="#">°F</a></span>
+                    <strong id="temperature"></strong>
+                    <span class="units"><a href="#" id="celcius-link" class="active">°C</a>
+                         | <a href="#" id="Fahrenheit-link">°F</a></span>
                 </div>
             </div>
             </div>
