added forecast HTML and CSS

--- a/index.html
+++ b/index.html
@@ -60,7 +60,75 @@
                 </ul>
             </div>
         </div>
-        </div>
+        <div class="row weather-forecast">
+            <div class="col-2">
+                <h4>
+                    Tuesday
+                </h4>
+                <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="">
+                <div class="weather-forecast-temperature">
+                    <strong>
+                        16°C
+                    </strong> 11°C
+                </div>
+            </div>
+            <div class="col-2">
+                <h4>
+                    Wednesday
+                </h4>
+                <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="">
+                <div class="weather-forecast-temperature">
+                    <strong>
+                        19°C
+                    </strong> 14°C
+            </div>
+            </div>
+            <div class="col-2">
+                <h4>
+                    Thursday
+                </h4>
+                <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="">
+                <div class="weather-forecast-temperature">
+                    <strong>
+                        19°C
+                    </strong> 14°C
+            </div>
+            </div>
+            <div class="col-2">
+                <h4>
+                    Friday
+                </h4>
+                <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="">
+                <div class="weather-forecast-temperature">
+                    <strong>
+                        19°C
+                    </strong> 14°C
+                </div>
+            </div>
+            <div class="col-2">
+                <h4>
+                    Saturday
+                </h4>
+                <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="">
+                <div class="weather-forecast-temperature">
+                    <strong>
+                        19°C
+                    </strong> 14°C
+                </div>
+            </div>
+            <div class="col-2">
+                <h4>
+                    Sunday
+                </h4>
+                <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="">
+                <div class="weather-forecast-temperature">
+                    <strong>
+                        19°C
+                    </strong> 14°C
+                </div>
+            </div>
+            </div>
+            </div>
         <small>
             <a href="https://github.com/MarKru21" target="_blank">Open source code,</a>
             by Marlen Krügener
