--- a/index.html
+++ b/index.html
@@ -58,74 +58,9 @@
                         Wind: <span id="wind"></span> km/h
                     </li>
                 </ul>
+
+                <div class="row weather-forecast" id="forecast">
             </div>
-        </div>
-        <div class="row weather-forecast">
-            <div class="col-2">
-                <h4>
-                    Tuesday
-                </h4>
-                <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="">
-                <div class="weather-forecast-temperature">
-                    <strong>
-                        16°C
-                    </strong> 11°C
-                </div>
-            </div>
-            <div class="col-2">
-                <h4>
-                    Wednesday
-                </h4>
-                <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="">
-                <div class="weather-forecast-temperature">
-                    <strong>
-                        19°C
-                    </strong> 14°C
-            </div>
-            </div>
-            <div class="col-2">
-                <h4>
-                    Thursday
-                </h4>
-                <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="">
-                <div class="weather-forecast-temperature">
-                    <strong>
-                        19°C
-                    </strong> 14°C
-            </div>
-            </div>
-            <div class="col-2">
-                <h4>
-                    Friday
-                </h4>
-                <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="">
-                <div class="weather-forecast-temperature">
-                    <strong>
-                        19°C
-                    </strong> 14°C
-                </div>
-            </div>
-            <div class="col-2">
-                <h4>
-                    Saturday
-                </h4>
-                <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="">
-                <div class="weather-forecast-temperature">
-                    <strong>
-                        19°C
-                    </strong> 14°C
-                </div>
-            </div>
-            <div class="col-2">
-                <h4>
-                    Sunday
-                </h4>
-                <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="">
-                <div class="weather-forecast-temperature">
-                    <strong>
-                        19°C
-                    </strong> 14°C
-                </div>
             </div>
             </div>
             </div>
